--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
     "google-genai>=1.19.0",
+    "matplotlib>=3.10.3",
     "pydantic>=2.11.5",
     "pytest>=8.4.0",
 ]
