symbolic math tool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "dotenv>=0.9.9",
     "google-genai>=1.19.0",
     "matplotlib>=3.10.3",
+    "numpy>=2.2.6",
     "pydantic>=2.11.5",
     "pytest>=8.4.0",
+    "sympy>=1.14.0",
 ]
